# RealtimeSTT

./: .compose.yaml.swp  .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  packages.apt  pyproject.toml
RealtimeSTT/: audio_recorder.py
tests/: gpu.check.txt  pip.check.txt  pyproject.toml  requirements.freeze.txt  requirements.locked.txt  simple_test_local.py
