[project]
name = "tests"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper==1.1.1",
    "halo==0.0.31",
    "openwakeword>=0.4.0",
    "pvporcupine==1.9.5",
    "pyaudio==0.2.14",
    "rich>=14.2.0",
    "scipy==1.15.2",
    "soundfile==0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "webrtcvad-wheels==2.0.14",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
]
